--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">StudentEventsApp</string>
+    <string name="title_activity_main">activity_main</string>
 </resources>
